# photonic-bench

./: CHANGELOG.md  CHECKLIST.md  CONTEXT.md  GOAL.md  PROGRESS.md  README.md  RUBRIC.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
docs/: json_schema.md  mlcommons_photonic_benchmark_proposal.md  mlcommons_photonic_reproducibility_checklist.md  model.md  photonic-bench-comparison-export-v1.schema.json  photonic-bench-decision-packet-v1.schema.json  photonic-bench-report-v1.schema.json  photonic-bench-transformer-layer-report-v1.schema.json  photonic-bench-transformer-model-report-v1.schema.json  reviewer_workflow.md
examples/: adept_2023_electro_photonic_surrogate.yaml  bandyopadhyay_2024_single_chip_dnn_surrogate.yaml  bert_base_12layer_model.yaml  bert_base_encoder_layer.yaml  chen_2026_fsr_gemm_surrogate.yaml  chipai_2025_photonic_chiplet_surrogate.yaml  dong_2023_continuous_time_tensor_core_surrogate.yaml  feldmann_2021_photonic_tensor_core_surrogate.yaml  gpt_style_decoder_kv_cache_model.yaml  gpt_style_decoder_layer.yaml  hitop_2025_optical_tensor_processor_surrogate.yaml  kari_2024_coherent_matrix_platform_surrogate.yaml  kovaios_2025_wdm_1tops_tensor_core_surrogate.yaml  lightening_transformer_2024_surrogate.yaml  lightning_2023_smartnic_surrogate.yaml  lin_2024_tfln_120gops_tensor_core_surrogate.yaml  load_report_json.py  luan_2026_single_shot_mmm_surrogate.yaml  matmul_64x64.yaml  meng_2025_digital_analog_hop_surrogate.yaml  meng_2025_mrr_otpu_tensor_core_surrogate.yaml  meyer_2026_reconfigurable_ptp_surrogate.yaml  (+22 more)
tasks/: todo.md  (+1 more)
(+322 files in other folders)
