[project]
name = "photonic-bench"
version = "0.1.0"
description = "Transparent benchmark cards for photonic AI energy and noise claims."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "jsonschema>=4.22",
    "Pillow>=10.0",
    "playwright>=1.49",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
photonic-bench = "photonic_bench.cli:main"

[tool.setuptools.package-data]
"photonic_bench.visualizer_assets" = ["*.html", "*.css", "*.js"]

[tool.setuptools.packages.find]
include = ["photonic_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
